; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_search.c_pci_get_domain_bus_and_slot.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_search.c_pci_get_domain_bus_and_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@PCI_ANY_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.pci_dev* @pci_get_domain_bus_and_slot(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.pci_dev*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.pci_dev* null, %struct.pci_dev** %8, align 8
  br label %9

9:                                                ; preds = %38, %3
  %10 = load i32, i32* @PCI_ANY_ID, align 4
  %11 = load i32, i32* @PCI_ANY_ID, align 4
  %12 = load %struct.pci_dev*, %struct.pci_dev** %8, align 8
  %13 = call %struct.pci_dev* @pci_get_device(i32 %10, i32 %11, %struct.pci_dev* %12)
  store %struct.pci_dev* %13, %struct.pci_dev** %8, align 8
  %14 = icmp ne %struct.pci_dev* %13, null
  br i1 %14, label %15, label %39

15:                                               ; preds = %9
  %16 = load %struct.pci_dev*, %struct.pci_dev** %8, align 8
  %17 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %16, i32 0, i32 1
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = call i32 @pci_domain_nr(%struct.TYPE_2__* %18)
  %20 = load i32, i32* %5, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %38

22:                                               ; preds = %15
  %23 = load %struct.pci_dev*, %struct.pci_dev** %8, align 8
  %24 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %23, i32 0, i32 1
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp eq i32 %27, %28
  br i1 %29, label %30, label %38

30:                                               ; preds = %22
  %31 = load %struct.pci_dev*, %struct.pci_dev** %8, align 8
  %32 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load i32, i32* %7, align 4
  %35 = icmp eq i32 %33, %34
  br i1 %35, label %36, label %38

36:                                               ; preds = %30
  %37 = load %struct.pci_dev*, %struct.pci_dev** %8, align 8
  store %struct.pci_dev* %37, %struct.pci_dev** %4, align 8
  br label %40

38:                                               ; preds = %30, %22, %15
  br label %9

39:                                               ; preds = %9
  store %struct.pci_dev* null, %struct.pci_dev** %4, align 8
  br label %40

40:                                               ; preds = %39, %36
  %41 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  ret %struct.pci_dev* %41
}

declare dso_local %struct.pci_dev* @pci_get_device(i32, i32, %struct.pci_dev*) #1

declare dso_local i32 @pci_domain_nr(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
